worked on fine-grained security concept
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1399 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -28,6 +28,7 @@
 
     <mx:Metadata>
         [Name("application")]
+        [ManagedEvent(name="APP.MERGE_GRANTS")]
     </mx:Metadata>
 
     <mx:Script>
