--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
@@ -32,37 +32,65 @@
 
     <mx:Script>
         <![CDATA[
-        	import org.openwms.web.flex.client.view.dialogs.AssignGrantsDialog;
-        	import org.openwms.web.flex.client.event.ApplicationEvent;
-        	import org.openwms.web.flex.client.event.UserEvent;
-        	import org.openwms.core.domain.system.usermanagement.SecurityObject;
-        	import org.openwms.web.flex.client.view.dialogs.AssignUsersDialog;
-        	import org.openwms.web.flex.client.view.dialogs.ConfirmDeleteRoleDialog;
-        	import mx.managers.PopUpManager;
-        	import org.openwms.web.flex.client.view.dialogs.CreateRoleDialog;
-        	import org.openwms.core.domain.system.usermanagement.User;
-        	import org.openwms.core.domain.system.usermanagement.Role;
+            import mx.managers.PopUpManager;
             import mx.controls.Alert;
             import mx.controls.dataGridClasses.DataGridColumn;
             import mx.collections.ArrayCollection;
             import mx.events.ListEvent;
+
+            import org.granite.tide.spring.Context;
+            import org.granite.tide.spring.Identity;
+            import org.granite.tide.events.TideResultEvent;
+
+            import org.openwms.core.domain.system.usermanagement.SecurityObject;
+            import org.openwms.core.domain.system.usermanagement.User;
+            import org.openwms.core.domain.system.usermanagement.Role;
             import org.openwms.web.flex.client.model.ModelLocator;
             import org.openwms.web.flex.client.event.RoleEvent;
-            import org.granite.tide.spring.Context;
-            [In]
+        	import org.openwms.web.flex.client.event.ApplicationEvent;
+        	import org.openwms.web.flex.client.event.UserEvent;
+        	import org.openwms.web.flex.client.view.dialogs.AssignUsersDialog;
+            import org.openwms.web.flex.client.view.dialogs.AssignGrantsDialog;
+        	import org.openwms.web.flex.client.view.dialogs.ConfirmDeleteRoleDialog;
+        	import org.openwms.web.flex.client.view.dialogs.CreateRoleDialog;
+            
+            [Inject]
             [Bindable]
+            /**
+             * Injected Model.
+             */
             public var modelLocator:ModelLocator;            
+            [Inject]
+            [Bindable]
+            /**
+             * Injected Tide identity object.
+             */
+            public var iden : Identity;
             [In]
+            /**
+             * Injected context.
+             */
             public var tideContext:Context;
             [Bindable]
             private var selected:Role;
+            [Bindable]
+            private var res:Boolean;
 
             private function init():void {
                 dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
                 if (modelLocator.allUsers.length == 0) {
                     dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
                 }
+                trace("any"+iden.ifAnyGranted('COMMON_add_roles_button', reHandler));
+                trace("all"+iden.ifAllGranted('COMMON_add_roles_button', reHandler));
+                trace("not"+iden.ifNotGranted('COMMON_add_roles_button', reHandler));
+                trace("not"+iden.ifNotGranted('COMMON_remove_role_button', reHandler));
             }
+            
+            private function reHandler(event:TideResultEvent):void {
+                res = event.result as Boolean;
+                trace("res:"+res);
+            } 
 
             private function onRowClick(event:ListEvent):void {
                 selected = event.currentTarget.selectedItem as Role;
@@ -180,7 +208,7 @@
              * Define how Grant information is displayed.
              */
             private function formatGrant(item:*):String {
-                return (item as SecurityObject).name + " - " + (item as SecurityObject).description;
+                return (item as SecurityObject).description + " (" + (item as SecurityObject).name + ")";
             }
         ]]>
     </mx:Script>
@@ -188,12 +216,12 @@
     <mx:HBox x="10" y="10" width="95%" verticalAlign="middle" backgroundColor="#FFA6A6">
         <mx:Label x="10" y="10" text="Roles" fontSize="24"/>
         <mx:VRule height="10"/>
-        <mx:Button id="addRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Create a new Role" icon="@Embed(source='/assets/images/Users--plus.png')" click="add()"/>
-        <mx:VRule height="10"/>
-        <mx:Button id="removeRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Role" icon="@Embed(source='/assets/images/Users--minus.png')" click="remove()"/>
-        <mx:VRule height="10"/>
-        <mx:Button id="saveRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Save a modified Role" icon="@Embed(source='/assets/images/Users--save.png')" click="save()"/>
-        <mx:VRule height="10"/>
+        <mx:Button id="addRoleBtn" visible="{iden.ifAnyGranted('COMMON_add_roles_button')}" buttonMode="true" mouseChildren="false" toolTip="Create a new Role" icon="@Embed(source='/assets/images/Users--plus.png')" click="add()"/>
+        <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_add_roles_button')}"/>
+        <mx:Button id="removeRoleBtn" visible="{iden.ifAnyGranted('COMMON_remove_role_button')}" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Role" icon="@Embed(source='/assets/images/Users--minus.png')" click="remove()"/>
+        <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_remove_role_button')}"/>
+        <mx:Button id="saveRoleBtn" visible="{iden.ifAnyGranted('COMMON_save_role_button')}" buttonMode="true" mouseChildren="false" toolTip="Save a modified Role" icon="@Embed(source='/assets/images/Users--save.png')" click="save()"/>
+        <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_save_role_button')}" />
         <mx:Button id="refreshRoleBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh the list of Roles" icon="@Embed(source='assets/images/icons/refresh.png')" click="refresh()"/>
     </mx:HBox>
     <mx:HRule x="9" y="53" width="95%"/>
@@ -209,20 +237,18 @@
 	            <mx:VBox width="50%">
 	                <mx:HBox verticalAlign="middle" backgroundColor="#FFA6A6" width="100%" backgroundAlpha="0.5" horizontalGap="8" height="25">
 	                    <mx:Label x="10" y="10" text="Assigned Grants" fontSize="10"/>
-	                    <mx:VRule height="10"/>
-	                    <mx:Button id="assignedGrantsBtn" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Assign Grants to the selected Role" click="addGrants()" icon="@Embed(source='assets/images/icons/grant--add.png')"/>
-	                    <mx:VRule height="10"/>
-	                    <mx:Button id="removeGrantsBtn" width="22" height="22" buttonMode="true" mouseChildren="false" enabled="{grantsLst.selectedItems.length > 0}" toolTip="Remove Grants from the selected Role" click="add()" icon="@Embed(source='assets/images/icons/grant--delete.png')"/>
+	                    <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_assign_grants_button')}"/>
+	                    <mx:Button id="assignedGrantsBtn" visible="{iden.ifAnyGranted('COMMON_assign_grants_button')}" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Assign Grants to the selected Role" click="addGrants()" icon="@Embed(source='assets/images/icons/grant--add.png')"/>
 	                </mx:HBox>
 	                <mx:List id="grantsLst" height="200" width="100%" allowMultipleSelection="true" labelFunction="formatGrant" dataProvider="{selected.grants}"/>
 	            </mx:VBox>
 	            <mx:VBox width="50%">
 			        <mx:HBox verticalAlign="middle" backgroundColor="#FFA6A6" width="100%" height="25" backgroundAlpha="0.5">
 			            <mx:Label x="10" y="10" text="Assigned Users" fontSize="10"/>
-			            <mx:VRule height="10"/>
-			            <mx:Button id="assignedUsersBtn" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Assign Users to the selected Role" click="addUsers()" icon="@Embed(source='/assets/images/User--plus.png')"/>
-			            <mx:VRule height="10"/>
-			            <mx:Button id="removeUsersBtn" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Remove Users from the selected Role" click="removeUsers()" icon="@Embed(source='/assets/images/User--minus.png')"/>
+			            <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_assign_users_button')}"/>
+			            <mx:Button id="assignedUsersBtn" visible="{iden.ifAnyGranted('COMMON_assign_users_button')}" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Assign Users to the selected Role" click="addUsers()" icon="@Embed(source='/assets/images/User--plus.png')"/>
+			            <mx:VRule height="10" visible="{iden.ifAnyGranted('COMMON_assign_users_button')}"/>
+			            <mx:Button id="removeUsersBtn" visible="{iden.ifAnyGranted('COMMON_assign_users_button')}" width="22" height="22" buttonMode="true" mouseChildren="false" toolTip="Remove Users from the selected Role" click="removeUsers()" icon="@Embed(source='/assets/images/User--minus.png')"/>
 			        </mx:HBox>
 	                <mx:List id="usersLst" height="200" width="100%" allowMultipleSelection="true" labelFunction="formatUser" dataProvider="{selected.users}" />
 	            </mx:VBox>
