--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -41,7 +41,7 @@
             import org.openwms.web.flex.client.model.ModelLocator;
             import org.openwms.web.flex.client.model.I18nMap;
             import flash.utils.Proxy;
-            [In]
+            [Inject]
             [Bindable]
             /**
              * Injected Granite identity object.
@@ -63,13 +63,12 @@
             public var loginMessageText:String = "";
             
             private function onShow():void {
+                identity.logout();
             	myUser.setFocus();
-                trace("Logged in2?"+identity.isLoggedIn())
                 PopUpManager.centerPopUp(this);
             }
             
             private function onLogin(username:String, password:String):void {
-                trace("Logged in3?"+identity.isLoggedIn())
                 if (modelLocator.SCREEN_LOCKED) {
                     if (modelLocator.viewLockedBy != username) {
                         //Alert.show(i18n['core_allg_text']+ modelLocator.viewLockedBy +" can unlock the application");
@@ -77,18 +76,11 @@
                     }
                 }
                 identity.login(username, password, loginOk, loginError);        
-                trace("Logged in4?"+identity.isLoggedIn())
             }
 
             private function loginOk(event:TideResultEvent):void {
-                trace("Logged in5?"+identity.isLoggedIn())
-                trace("any"+identity.ifAnyGranted('COMMON_add_roles_button'));
-                trace("all"+identity.ifAllGranted('COMMON_add_roles_button'));
-                trace("not"+identity.ifNotGranted('COMMON_add_roles_button'));
-                trace("not"+identity.ifNotGranted('COMMON_remove_role_button'));
                 loginMessageText = null;
                 dispatchEvent(new ApplicationEvent(ApplicationEvent.APP_LOGIN_OK));
-                trace("Logged in6?"+identity.isLoggedIn())
                 PopUpManager.removePopUp(this);
             }
         
